# bazel-hermetic-python

./: BUILD.bazel  README.md  WORKSPACE
